; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_database.c_msi_get_merge_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_database.c_msi_get_merge_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_9__ = type { i32 }

@msi_get_merge_table.query = internal constant [19 x i8] c"SELECT * FROM `%s`\00", align 16
@ERROR_OUTOFMEMORY = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, %struct.TYPE_10__**)* @msi_get_merge_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @msi_get_merge_table(i32* %0, i32 %1, %struct.TYPE_10__** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_10__**, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_10__** %2, %struct.TYPE_10__*** %7, align 8
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %10, align 8
  %11 = call %struct.TYPE_10__* @msi_alloc_zero(i32 40)
  store %struct.TYPE_10__* %11, %struct.TYPE_10__** %9, align 8
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %13 = icmp ne %struct.TYPE_10__* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %15, align 8
  %16 = load i64, i64* @ERROR_OUTOFMEMORY, align 8
  store i64 %16, i64* %4, align 8
  br label %83

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 8
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 7
  %24 = call i64 @msi_get_table_labels(i32* %18, i32 %19, i32* %21, i32* %23)
  store i64 %24, i64* %8, align 8
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* @ERROR_SUCCESS, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %17
  br label %75

29:                                               ; preds = %17
  %30 = load i32*, i32** %5, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i64 @MSI_OpenQuery(i32* %30, %struct.TYPE_9__** %10, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @msi_get_merge_table.query, i64 0, i64 0), i32 %31)
  store i64 %32, i64* %8, align 8
  %33 = load i64, i64* %8, align 8
  %34 = load i64, i64* @ERROR_SUCCESS, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %29
  br label %75

37:                                               ; preds = %29
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %39 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %39, i32 0, i32 6
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 5
  %43 = call i64 @msi_get_query_columns(%struct.TYPE_9__* %38, i32* %40, i32* %42)
  store i64 %43, i64* %8, align 8
  %44 = load i64, i64* %8, align 8
  %45 = load i64, i64* @ERROR_SUCCESS, align 8
  %46 = icmp ne i64 %44, %45
  br i1 %46, label %47, label %48

47:                                               ; preds = %37
  br label %75

48:                                               ; preds = %37
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 4
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %53 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %52, i32 0, i32 3
  %54 = call i64 @msi_get_query_types(%struct.TYPE_9__* %49, i32* %51, i32* %53)
  store i64 %54, i64* %8, align 8
  %55 = load i64, i64* %8, align 8
  %56 = load i64, i64* @ERROR_SUCCESS, align 8
  %57 = icmp ne i64 %55, %56
  br i1 %57, label %58, label %59

58:                                               ; preds = %48
  br label %75

59:                                               ; preds = %48
  %60 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %61 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %60, i32 0, i32 2
  %62 = call i32 @list_init(i32* %61)
  %63 = load i32, i32* %6, align 4
  %64 = call i32 @strdupW(i32 %63)
  %65 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %66 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %65, i32 0, i32 1
  store i32 %64, i32* %66, align 8
  %67 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %68 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %67, i32 0, i32 0
  store i64 0, i64* %68, align 8
  %69 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %70 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %69, i32 0, i32 0
  %71 = call i32 @msiobj_release(i32* %70)
  %72 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %73 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  store %struct.TYPE_10__* %72, %struct.TYPE_10__** %73, align 8
  %74 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %74, i64* %4, align 8
  br label %83

75:                                               ; preds = %58, %47, %36, %28
  %76 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %77 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %76, i32 0, i32 0
  %78 = call i32 @msiobj_release(i32* %77)
  %79 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %80 = call i32 @free_merge_table(%struct.TYPE_10__* %79)
  %81 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %81, align 8
  %82 = load i64, i64* %8, align 8
  store i64 %82, i64* %4, align 8
  br label %83

83:                                               ; preds = %75, %59, %14
  %84 = load i64, i64* %4, align 8
  ret i64 %84
}

declare dso_local %struct.TYPE_10__* @msi_alloc_zero(i32) #1

declare dso_local i64 @msi_get_table_labels(i32*, i32, i32*, i32*) #1

declare dso_local i64 @MSI_OpenQuery(i32*, %struct.TYPE_9__**, i8*, i32) #1

declare dso_local i64 @msi_get_query_columns(%struct.TYPE_9__*, i32*, i32*) #1

declare dso_local i64 @msi_get_query_types(%struct.TYPE_9__*, i32*, i32*) #1

declare dso_local i32 @list_init(i32*) #1

declare dso_local i32 @strdupW(i32) #1

declare dso_local i32 @msiobj_release(i32*) #1

declare dso_local i32 @free_merge_table(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
